<resources>
    <string name="app_name">GPLX App</string>
    <string name="you_are_offline">You are offline, please check your internet!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_change_learning">Học bằng lái xe</string>
    <string name="ic_home_change_rank">Thay đổi hạng bằng lái</string>
    <string name="ic_home_manual">Hướng dẫn sử dụng</string>
    <string name="ic_home_change_voice">Thay đổi giọng đọc</string>

    <string name="footer_setting_app">Cài đặt ứng dụng</string>
    <string name="footer_support_email">Email hỗ trợ</string>
    <string name="footer_other_app">Các ứng dụng khác</string>
    <string name="footer_share_app">Chia sẻ ứng dụng</string>
    <string name="footer_rate_app">Đánh giá ứng dụng</string>
    <string name="footer_policy">Chính sách và điều khoản</string>
    <string name="home_test">THI THỬ SÁT HẠCH</string>
    <string name="home_learn">HỌC LÝ THUYẾT</string>
    <string name="home_exam">THI SÁT HẠCH</string>
    <string name="home_stop">BIỂN BÁO ĐƯỜNG BỘ</string>
    <string name="home_learn_warning"><font color="#FF0000" size="18"> BẠN CẦN NỖ LỰC HƠN NỮA! </font>\n Tỉ lệ đỗ của bạn là: %d</string>
    <string name="home_tips">MẸO THI KẾT QUẢ CAO</string>
    <string name="home_search_law">TRA CỨU LUẬT</string>
    <string name="home_wrong_good">CÁC CÂU HAY SAI</string>
    <string name="label_start">LÀM BÀI</string>
    <string name="label_continue">TIẾP TỤC</string>
    <string name="label_fail">TRƯỢT</string>
    <string name="label_done">VƯỢT QUA</string>
    <string name="label_complete_ask">%d/%d</string>
    <string name="home_test_more">THI THỬ SÁT HẠCH\n<font color="#bdbdbd" size="12">Tổng hợp đề thi thử\n200 câu hỏi</font></string>
    <string name="home_learn_more">HỌC LÝ THUYẾT\n<font color="#bdbdbd" size="12">7 chủ đề\n200Câu hỏi</font></string>
    <string name="home_stop_more">BIỂN BÁO ĐƯỜNG BỘ\n<font color="#bdbdbd" size="12">Đầy đủ biển báo giao thông</font></string>
    <string name="home_tips_more">MẸO THI KẾT QUẢ CAO\n<font color="#bdbdbd" size="12">Mẹo trả lời phân theo các câu hỏi</font></string>
    <string name="home_search_law_more">TRA CỨU LUẬT\n<font color="#bdbdbd" size="12">Tra cứu nhanh và mức phạt tiền</font></string>
    <string name="home_wrong_good_more">CÁC CÂU HAY SAI\n<font color="#bdbdbd" size="12">Lưu lại các câu bạn trả lời sai</font></string>

    <string name="reminders_notification_channel_id">com.htnguyen.gplxapp</string>
    <string name="title_notification_reminder">CÁC CÂU HAY SAI</string>
    <string name="description_notification_reminder">CÁC CÂU HAY</string>
    <string name="reminder_everyday">Nhắc nhở hằng ngày</string>
    <string name="label_number_ask">Câu %d/%d</string>
    <string name="label_finish">KẾT THÚC</string>
    <string name="label_for_start_exam">Đề thi bằng lái gồm 25 câu hỏi làm bài trong thời gian 19 phút. \n \n Để vượt qua bài thi, bạn cần trả lời đúng 21/25 câu hỏi và không sai câu điểm liệt nào</string>
    <string name="complain_result">Giải thích đáp án</string>
    <string name="label_result_exam_title">Kết quả thi sát hạch</string>
    <string name="label_history_exam">Xem lại bài thi</string>
    <string name="license_aone_title">Bằng A1</string>
    <string name="license_aone_content">Áp dụng cho gười từ đủ 18 tuổi và chạy những loại Xe mô tô hai bánh có dung tích xi-lanh từ 50 cm3 đến dưới 175 cm3</string>
    <string name="license_atwo">Bằng A2</string>
    <string name="license_atwo_content">Áp dụng cho người từ đủ 18 tuổi và chạy những loại xe mô tô hai bánh có dung tích xi-lanh từ 175 cm3 trở lên</string>
    <string name="choose_license_title">CHỌN LOẠI BẰNG LÁI XE MÁY!</string>
    <string name="choose_license_content">Chọn hạng bằng thi</string>
    <string name="light_mode">Nền sáng</string>
    <string name="dark_mode">Nền tối</string>
    <string name="change_size_text_and_mode">Thay đổi kích thước chữ và chế độ nền</string>
    <string name="change_content"><![CDATA[Ấn biểu tượng menu bên trái trên cùng màn hình trang chủ -> vào Cài đặt ứng dụng để thay đổi kích thước phông chữ và chế độ hiển thị. Chọn chế độ nề tối để bảo vệ mắt của bạn đỡ mỏi khi ôn thi trong 1 thời gian dài]]></string>
    <string name="cancel">HUỶ BỎ</string>
    <string name="agree">ĐỒNG Ý</string>

</resources>