<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_change_learn"
            android:title="@string/home_change_learning"/>
        <item
            android:id="@+id/nav_choose_grade"
            android:icon="@drawable/ic_home_change_rank"
            android:title="@string/ic_home_change_rank"/>
        <item
            android:id="@+id/nav_study_guide"
            android:icon="@drawable/ic_home_manual"
            android:title="@string/ic_home_manual"/>

        <item
            android:id="@+id/nav_change_voice"
            android:icon="@drawable/ic_home_change_voice"
            android:title="@string/ic_home_change_voice"/>
    </group>


</menu>