<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_8sdp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"
                android:visibility="gone"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/myColoredButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/choose_license_content"
                android:gravity="start|center_vertical"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/ic_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_check"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/choose_license_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp"
                android:id="@+id/btn_license_A1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1.5"
                        android:src="@drawable/motorbike_one" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_6sdp"
                        android:layout_marginVertical="@dimen/_4sdp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/license_aone_title"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/license_aone_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ic_check_A1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:src="@drawable/ic_check"
                        android:visibility="invisible"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_license_A2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_6sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1.5"
                        android:src="@drawable/motorbike_two" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_6sdp"
                        android:layout_marginVertical="@dimen/_4sdp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/license_atwo"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/license_atwo_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ic_check_A2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:src="@drawable/ic_check"
                        android:visibility="invisible"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</layout>